tests/core/ill-typed/extra-tests/multiparameter-functions/bad-logic-and-1.stella
language core;

extend with #multiparameter-functions, #logical-operators;

fn and_fn(n : Nat, m : Bool) -> Nat {
    return n and m
}

fn main(n : Nat) -> Nat {
  return and_fn(n, true)
}
